light edit to async-lru.md

--- a/_posts/2019-12-28-async-lru.md
+++ b/_posts/2019-12-28-async-lru.md
@@ -25,13 +25,16 @@ included". So I was surprised when I recently found myself wanting to set up an
 LRU cache for an `async` function and realized there is no obvious way to do
 this.
 
-There is a third-party library called `async_lru` that offers an analogous
-decorator for `async` functions. They've basically just gone and reimplemented
-the stdlib decorator from scratch and thrown in a bunch of `async def`s. The
-implementation is a few hundred lines long and seems -- I don't know -- fine, I
-guess, but I like to minimize third-party dependencies in my projects,
-especially for things which seem this simple. It seems like we should be able to
-do this without reimplementing logic that already exists in stdlib.
+The stdlib docs don't mention this case. I didn't see aything about it on Stack
+Overflow. I did find a third-party library: it's called `async_lru` and it
+offers a decorator for `async` functions that behaves similarly to `lru_cache`.
+
+That library's author has basically just gone and reimplemented the stdlib
+decorator from scratch and thrown in a bunch of `async def`s. The implementation
+is a few hundred lines long and seems -- I don't know -- fine, I guess, but I
+like to minimize third-party dependencies in my projects, especially for things
+which seem this simple. It seems like we should be able to do this without
+reimplementing logic that already exists in stdlib.
 
 And so, after a bit of hacking I found a way to adapt stdlib's `lru_cache` to
 the `async` case. I've included both specific and general examples below.
