Obsidian: A Constraint-Based System for Graphics Programming

--- a/_posts/2020-04-14-obsidian.md
+++ b/_posts/2020-04-14-obsidian.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Obsidian: A Constraint-Based Graphics Programming System"
+title: "Obsidian: A Constraint-Based System for Graphics Programming"
 ---
 
 # Preface
