phrasing adjustment + more page metadata

--- a/_posts/2020-04-14-obsidian.md
+++ b/_posts/2020-04-14-obsidian.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Obsidian: A Constraint-Based System for Graphics Programming"
+description: "What's your greatest fear? Mine is making publication-grade vector graphics."
 ---
 
 # Preface
