trying out a different description for obsidian.md

--- a/_posts/2020-04-14-obsidian.md
+++ b/_posts/2020-04-14-obsidian.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Obsidian: A Constraint-Based System for Graphics Programming"
-description: "What's your greatest fear? Mine is making publication-grade vector graphics."
+description: Obsidian gives you a terse, clear, expressive vocabulary for describing images with code and then rendering your descriptions. It lets you harness the full power of modern SMT solvers to generate figures based on constraints which can be as simple or complex as you like. It is designed to be easy to use, easy to read, and easy to extend.
 ---
 
 # Preface
