--- a/_posts/2020-04-14-obsidian.md
+++ b/_posts/2020-04-14-obsidian.md
@@ -117,7 +117,11 @@ canvas.save_svg("gallery/circle_and_square.svg")
 
 This script produces the following image:
 
-<img src="/assets/img/circle_and_square.svg">
+{%
+include blog-image.md
+image="/assets/img/obsidian/circle_and_square.svg"
+description="A circle, with a square inscribed within it."
+%}
 
 Note the total absence of magic numbers in this script. In fact, it uses almost
 no numbers at all. Instead, shapes are created, relationships between their
@@ -163,7 +167,11 @@ canvas.save_svg("gallery/square_grid.svg")
 
 And here's the output:
 
-<img src="/assets/img/square_grid.svg">
+{%
+include blog-image.md
+image="/assets/img/obsidian/square_grid.svg"
+description="A two-tone grid of squares representing 1s and 0s."
+%}
 
 This example makes use of Obsidian's built-in `ShapeGrid` class. This is a
 special kind of `Group` which knows how to generate the necessary constraints to
@@ -181,6 +189,12 @@ is centered in the canvas by default; this is a convenience feature provided by
 Here's a third example - this one's my favorite:
 
 <img src="/assets/img/go_board.svg">
+
+{%
+include blog-image.md
+image="/assets/img/obsidian/go_board.svg"
+description="An annotated Go board depicting Shusaku's famous Ear-Reddening Move."
+%}
 
 This Go board is defined, populated with stones, and rendered
 [in just 177 lines of code](https://github.com/wootfish/obsidian/blob/master/examples/go_board.py),
@@ -333,11 +347,11 @@ to work. The Jupyter notebook ([which you can view here](https://github.com/woot
 simply starts with `import go_board`, wraps `go_board`'s methods with some
 interactive widgets, and returns the result. That's all you need to do.
 
-Why might you want this? Well, in practically every graphic design project,
-there comes a point where you're spending most of your time tweaking a handful
-of parameters and seeing how you like the results. The faster you can see and
-compare the results of those tweaks, the more productive you'll be - and it's
-hard to imagine getting much faster than this.
+Why might you want this? With any sort of technical graphic design, there comes
+a point where you're spending most of your time tweaking a handful of parameters
+and seeing how you like the results. The faster you can see and compare the
+results of those tweaks, the more productive you'll be - and it's hard to
+imagine getting much faster than this.
 
 # Design
 
