updated post title formatting

--- a/_posts/2019-12-28-async-lru.md
+++ b/_posts/2019-12-28-async-lru.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "python: async LRU caching"
+title: "Python: async LRU caching"
 ---
 
 Caching synchronous Python functions is easy -- just use `functools.lru_cache`:
